# one-0-one

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_c4.py  run_game.py
.claude/: settings.json
agents/: gui-architect.md  tui-architect.md
dev/: TODO.md  authority-mode-design-review.md  component-design-tui.md  component-design-web.md  game-engine-architecture-proposal.md  game-playing-policy-questions.md  notes-on-mafia-game.md  preliminary-solution-design.md  requirements.md  vision.md
orchestrators/: basic.py  mafia.py  market_research.py  poker.py  telephone.py  turn_based.py
personas/: roster.yaml
session-templates/: game-20-questions.yaml  game-battleship.yaml  game-connect-four.yaml  game-mafia-12.yaml  game-mafia.yaml  game-telephone.yaml  game-texas-holdem.yaml  problem-solve-sorting-algorithm.yaml  research-climate-policy.yaml  research-market-research.yaml  social-ai-opinions.yaml  task-write-readme.yaml
src/: logging.py  memory.py  personas.py  response_parser.py  settings.py
tests/: conftest.py  test_battleship_game.py  test_battleship_live_e2e.py  test_channel_router.py  test_config.py  test_connect_four_game.py  test_connect_four_live_e2e.py  test_engine_integration.py  test_event_bus.py  test_events.py  test_game_contracts.py  test_game_e2e.py  test_game_runtime.py  test_inflection.py  test_inflection_integration.py  test_litellm_client.py  test_logging.py  test_mafia_game.py  test_mafia_live_e2e.py  test_mafia_tts_e2e.py  test_model_catalog.py  test_moderation_backends.py  test_moderator_protocol.py  test_personas.py  (+9 more)
(+82 files in other folders)
